competencies completed for this project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<!-- 54I - 1 -->
+<!-- 54I-1 -->
 
 <head>
-  <!-- 54I - 2 -->
+  <!-- 54I-2 -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
@@ -57,13 +57,26 @@
   <div class="outer">
     position stuffs
     <div class="inner">
+      no more things
       <p class="atomic">things and stuff</p>
       <p class="text-mod" style="display: block"></p>
-      <p style="float: right; background-color: red;">I am floated</p><!-- 25D, 25F -->
+      <p style="float: right; background-color: red;">floated right</p><!-- 25D, 25F -->
     </div>
   </div>
 
-</body><!-- 54I - 3 -->
+  <div>
+    <p class="melt">Slide</p>
+    <p class="animate">Ooo colors</p>
+    <p class="flip">WOW - MOM - WOW - MOM - WOW - MOM</p>
+  </div>
+  <div class="flex-cont">
+    <i class="fas fa-circle-notch"></i>
+    <i class="fas fa-circle-notch"></i>
+    <i class="fas fa-circle-notch"></i>
+    <i class="fas fa-circle-notch"></i>
+  </div>
+
+</body><!-- 54I-3 -->
 
 
 <section><!--54D-2-->
